<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/meLoginSideMenu"
            android:icon="@drawable/ic_side_login"
            android:title="@string/me_login"/>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/meSideMenu"
            android:icon="@drawable/ic_side_info"
            android:title="@string/me_me"/>
        <item
            android:id="@+id/meSettingSideMenu"
            android:icon="@drawable/ic_side_person"
            android:title="@string/me_message"/>
        <item
            android:id="@+id/meCollectSideMenu"
            android:icon="@drawable/ic_side_collection"
            android:title="@string/me_collect"/>
        <item
            android:id="@+id/meExitSideMenu"
            android:icon="@drawable/ic_sign_out_side_menu"
            android:title="@string/me_logout"/>
    </group>
<!--    <group-->
<!--        android:id="@+id/group3"-->
<!--        android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/meLinkSideMenu"-->
<!--            android:icon="@drawable/ic_link_side_menu"-->
<!--            android:title="@string/me_link"/>-->
<!--    </group>-->
<!--    <group-->
<!--        android:id="@+id/group4"-->
<!--        android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/meGithubSideMenu"-->
<!--            android:icon="@drawable/ic_github_side_menu"-->
<!--            android:title="@string/me_github"/>-->
<!--        <item-->
<!--            android:id="@+id/meBilibiliSideMenu"-->
<!--            android:icon="@drawable/ic_bilibili_side_menu"-->
<!--            android:title="@string/me_bilibili"/>-->
<!--        <item-->
<!--            android:id="@+id/meSteamSideMenu"-->
<!--            android:icon="@drawable/ic_steam_side_menu"-->
<!--            android:title="@string/me_steam"/>-->
<!--    </group>-->
</menu>