<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/face_back"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/faceList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/faceBilibili"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/face_bilibili"
                android:layout_height="30dp"/>
            <TextView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/faceTv"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/face_tv"
                android:layout_height="30dp"/>
            <TextView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/faceZhihu"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/face_zhihu"
                android:layout_height="30dp"/>
            <TextView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/faceTieba"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/face_tieba"
                android:layout_height="30dp"/>
            <TextView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/faceText"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/face_text"
                android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>