<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="item" type="com.xiaoyou.library.net.entity.response.PostContentDetail" />
    </data>
    <LinearLayout
        tools:context=".ui.activity.PostActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- 被依赖view （dependency）-->
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingLayout"
                    app:title="@{item.title}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed"
                    app:titleEnabled="true">
                    <!-- 可伸缩背景图布局文件 -->
                    <RelativeLayout
                        android:id="@+id/animRoot"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        app:layout_collapseMode="parallax">
                        <ImageView
                            android:id="@+id/postBackground"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:contentDescription="@string/index_head_post"/>
                    </RelativeLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:navigationIcon="@drawable/ic_common_back"/>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>


            <!-- 界面布局文件 作用view （child）-->
            <androidx.core.widget.NestedScrollView
                android:id="@+id/dataRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!--文章数据展示部分-->
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:fontFamily="@font/regular"
                            android:text="@string/post_img_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_marginEnd="5dp"
                            android:id="@+id/text_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{item.date}"/>
                        <TextView
                            android:fontFamily="@font/regular"
                            android:id="@+id/imgComment"
                            android:text="@string/post_img_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_marginEnd="5dp"
                            android:id="@+id/text_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{item.comment+"条评论"}'/>
                        <TextView
                            android:fontFamily="@font/regular"
                            android:text="@string/post_img_good"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_marginEnd="5dp"
                            android:id="@+id/text_good"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{item.good+"人点赞"}'/>
                        <TextView
                            android:fontFamily="@font/regular"
                            android:text="@string/post_img_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text='@{item.view+"次浏览"}'/>
                    </LinearLayout>
                    <!--文章内容展示部分-->
                    <com.xiaoyou.library.common.components.NoScrollWebView
                        android:id="@+id/postContentWeb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <!--文章内容评论部分-->
                    <com.xiaoyou.xblog.ui.components.Comment
                        android:id="@+id/postComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
        <!--评论区-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/white"
                android:id="@+id/comment_nav"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:src="@mipmap/avatar"
                    android:id="@+id/commentAvatar"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:fontFamily="@font/solid"
                    android:gravity="center"
                    android:foreground="@drawable/style_text_round"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="25sp"
                    android:id="@+id/postBottomAdd"
                    android:text="@string/post_bottom_ico_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
                <EditText
                    android:id="@+id/commentEdit"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:hint="@string/comment_say"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="@string/comment_say"
                    android:inputType="text" />
                <TextView
                    android:fontFamily="@font/regular"
                    android:id="@+id/commentSmile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:foreground="@drawable/style_text_round"
                    android:gravity="center"
                    android:text="@string/comment_smile"
                    android:textSize="25sp" />
                <Button
                    android:backgroundTint="?colorPrimary"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/commentSend"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:elevation="100dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_width="60dp"
                    android:text="@string/comment_send"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <!--表情显示-->
            <com.xiaoyou.xblog.ui.components.Face
                android:visibility="gone"
                android:id="@+id/face_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <!--底部点赞和收藏-->
            <LinearLayout
                android:visibility="gone"
                android:background="@color/white"
                android:id="@+id/post_bottom"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:baselineAligned="false">
                <LinearLayout
                    android:id="@+id/postGoodAction"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/postBottomGood"
                        android:fontFamily="@font/regular"
                        android:textColor="@color/function_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_bottom_ico_good"/>
                    <TextView
                        android:textColor="@color/function_blue"
                        android:id="@+id/postBottomGoodText"
                        android:text="@string/post_bottom_good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/postPayAction"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/brands"
                        android:textColor="@color/function_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_bottom_ico_pay"/>
                    <TextView
                        android:textColor="@color/function_red"
                        android:text="@string/post_bottom_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/postCollectAction"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/regular"
                        android:textColor="@color/function_yellow"
                        android:id="@+id/postBottomCollect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_bottom_ico_collect"/>
                    <TextView
                        android:textColor="@color/function_yellow"
                        android:id="@+id/postBottomCollectText"
                        android:text="@string/post_bottom_collect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/postShareAction"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="@font/solid"
                        android:textColor="@color/function_green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post_bottom_ico_share"/>
                    <TextView
                        android:textColor="@color/function_green"
                        android:text="@string/post_bottom_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>