<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="reset"
            type="com.xiaoyou.library.net.entity.param.ResetPassword" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.SignInActivity">
        <ImageView
            android:id="@+id/loginBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SignPageCardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15sp"
                android:orientation="vertical">
                <com.william.gradient.GradientTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textSize="25sp"
                    android:layout_margin="15sp" />
                <EditText
                    android:text="@={reset.email}"
                    android:id="@+id/eMailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:textSize="15sp"
                    android:paddingStart="20sp"
                    android:hint="@string/me_email"
                    android:background="@drawable/sign_activity_edit_text_selector"
                    android:autofillHints="@string/me_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="RtlSymmetry" />
                <EditText
                    android:id="@+id/passwordEditText"
                    android:text="@={reset.password}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginTop="20sp"
                    android:textSize="15sp"
                    android:paddingStart="20sp"
                    android:hint="@string/me_password"
                    android:background="@drawable/sign_activity_edit_text_selector"
                    android:autofillHints="@string/me_password"
                    android:inputType="textPassword"
                    tools:ignore="RtlSymmetry" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp">
                    <EditText
                        android:id="@+id/verifyEditText"
                        android:text="@={reset.code}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15sp"
                        android:layout_marginEnd="15sp"
                        android:textSize="15sp"
                        android:paddingStart="20sp"
                        android:hint="@string/me_verify"
                        android:background="@drawable/sign_activity_edit_text_selector"
                        android:autofillHints="@string/me_verify"
                        android:inputType="text"
                        tools:ignore="RtlSymmetry"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <Button
                        android:id="@+id/verifyButton"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/dp_5"
                        android:layout_height="30sp"
                        android:layout_marginEnd="5sp"
                        android:text="@string/me_get_verify"
                        android:textColor="@color/white"
                        android:background="@drawable/sign_activity_button_bk"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="@id/verifyEditText"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/forgetButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:text="@string/me_change_password"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/forgetTitle"
                    android:background="@drawable/sign_activity_button_bk"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>